--- a/Wordle(Clone)/style.css
+++ b/Wordle(Clone)/style.css
@@ -7,8 +7,8 @@
     weight:30vw; */
     display: flex;
     flex-direction: column;
-    margin-left: 0;
-    margin-right: 0;
+    margin:auto;
+    align-items: center;
 }
 .scoreboardletter{
   border: 2px solid black; 
@@ -20,4 +20,39 @@
     display: flex;
     flex-direction: row;
     margin: 5px;
+}
+.hidden{
+    visibility: hidden;
+}
+.correct{
+    background-color: greenyellow;
+}
+.close{
+    background-color: grey;
+}
+.wrong{
+    background-color: red;
+}
+.invalid{
+    animation: flash 1s;
+}
+.output {
+    position: relative;
+    color: black;
+    height: 10vh;
+    width: 70vh;
+    margin: auto;
+    font-size: 34px;
+    font-weight: bold;
+    left: 16vh;
+    top: -6vh;
+}
+@keyframes flash {
+    5%{
+        border-color: crimson;
+    }
+
+    100%{
+        border-color: black;
+    }
 }
